--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://hdroguetta.github.io/mygames/",
+  "homepage": "https://hdroguetta.github.io/mygames",
   "name": "mygames",
   "version": "0.1.0",
   "private": true,
